fixed image alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ img {
 img:hover {
     transform: scale(1.1);
     transition: ease 300ms;
-
+    background-color: 5px black;
 }
 
 section {
@@ -101,11 +101,17 @@ section {
 
 }
 
+.other {
+    max-width: 450px;
+    display: flex;
+    margin-left: 75px;
+}
+
 footer {
     padding: 20px;
     background-color: orange;
     width: 100%;
-    height: 11rem;
+    height: 3rem;
     bottom: 0;
     position: fixed;
 }
